gateway-advanced/echo-header-http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: header-http-echo
spec:
  parentRefs:
  - name: cilium-gw
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /cilium-add-a-request-header
    #filters:
    #- type: RequestHeaderModifier
    #  requestHeaderModifier:
    #    add:
    #    - name: my-cilium-header-name
    #      value: my-cilium-header-value
    backendRefs:
      - name: echo-1
        port: 8080

Let's now check that the header is modified by Cilium Gateway API:

Make a curl HTTP request to that address again:
